objects/Installation_Management__c.object
<CustomObject>
    <fields>
        <fullName>COI_Date__c</fullName>
        <description>Date of Customer&apos;s acceptance of Installation.</description>
        <label>COI Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Approved_Date__c</fullName>
        <description>Date Contract was approved</description>
        <label>Contract Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>D_A_COA_Received_Date__c</fullName>
        <description>Date of Delivery and Acceptance.</description>
        <label>D&amp;A/COA Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivery_Date__c</fullName>
        <description>The date the press was shipped</description>
        <label>Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Finance_Method__c</fullName>
        <description>Method of funding of the deal.</description>
        <label>Finance Method</label>
        <picklist>
            <picklistValues>
                <fullName>Account offset</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bank Guarantee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash - Bank Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HPFS - Standard Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Letter of Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non HPFS Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telegraph Transfer</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Funding_Status__c</fullName>
        <description>Measure of funding received.</description>
        <label>Funding Status</label>
        <picklist>
            <picklistValues>
                <fullName>1-Year Rental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1/2-Year Rental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10% Deposit Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100% Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>120-Day Rental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5% Deposit Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90% Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90-Day Rental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt;10% Deposit Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed-App Rec&apos;d by 3rd Party</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed-App Rec&apos;d by HPFS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Approved-Declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Challenged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D&amp;A Issued</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lease Docs to Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment in Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VAL-PO Issued</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Installation_Comments__c</fullName>
        <description>Customer Start up Manager&apos;s note on the Installation progress. Typically recorded on the weekly install calls.</description>
        <label>Installation Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Installation_Date__c</fullName>
        <description>Date of actual install.</description>
        <label>Installation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Installation_Stage__c</fullName>
        <description>Indicates progress made on the Installation.</description>
        <label>Installation Stage</label>
        <picklist>
            <picklistValues>
                <fullName>5a - Agreement Signed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5b - Agreement Validated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5c - Financing Validated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5d - Shipped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5e - COI</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <description>Date when order is invoiced.</description>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Likelihood_Will_Revenue_Recognize__c</fullName>
        <label>Likelihood Will Revenue Recognize</label>
        <picklist>
            <picklistValues>
                <fullName>Closed (RR)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Operator_Training_Date__c</fullName>
        <description>Date when client&apos;s representive is scheduled for Press Operator training.</description>
        <label>Operator Training Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Installation Managements</relationshipLabel>
        <relationshipName>Install_Mgmts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Order_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that indicates the order is confirmed.</description>
        <label>Order Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order_Status__c</fullName>
        <description>Order Status.</description>
        <label>Order Status</label>
        <picklist>
            <picklistValues>
                <fullName>Advanced Notice Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved Order - Not Financed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Clean - Approving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Recd - Correcting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Move Close</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order - wait m/c or shpt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rentals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revenue Recognized</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shpd Order - wait Installation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shpd Order - wait POD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trial</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payment_Terms__c</fullName>
        <description>Payment terms approved for the deal.</description>
        <label>Payment Terms</label>
        <picklist>
            <picklistValues>
                <fullName>10/80/10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100% upon 30 days COI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash In Advance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Letter Of Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Milestone payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non standard terms</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PrePress_Training_Date__c</fullName>
        <description>Date when client&apos;s representive is scheduled for Pre-Press training.</description>
        <label>PrePress Training Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <description>Indicates if the product being sold is a Option, Consumable, Press,  refurbished or Rental, Trial.</description>
        <label>Product Condition</label>
        <picklist>
            <picklistValues>
                <fullName>Beta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Demo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Expansion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Option</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refurbished</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade in</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Try &amp; Buy</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Revenue_Recognition_Date__c</fullName>
        <description>Date when Finance confirms that revenue recognition has been completed for the deal.</description>
        <label>Revenue Recognition Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Site_Survey_Date__c</fullName>
        <description>Date Customer&apos;s site was surveyed prior to despatch of equipment.</description>
        <label>Site Survey Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Site_Survey_Status__c</fullName>
        <description>Indicates status of the Site Survey request.</description>
        <label>Site Survey Status</label>
        <picklist>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delayed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Further Site Survey Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inspection Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Installation Management</label>
    <nameField>
        <displayFormat>INT MGMT-{00000}</displayFormat>
        <label>Install MGMT Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Installation Managements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Installation_Stage_is_Mandatory</fullName>
        <active>true</active>
        <description>Installation Stage is Mandatory</description>
        <errorConditionFormula>OR(ISNULL( TEXT( Installation_Stage__c ) ), ISBLANK( TEXT( Installation_Stage__c ) ) )</errorConditionFormula>
        <errorDisplayField>Installation_Stage__c</errorDisplayField>
        <errorMessage>Installation Stage  can not be Null</errorMessage>
    </validationRules>
</CustomObject>